<resources>
    <string name="app_name">Smart Farm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Add Post</string>
    <string name="post_title">Post Title</string>
    <string name="u">U</string>
    <string name="enter_description">Enter Description</string>
    <string name="INSTRUMENT_MODEL_NAME">Mahindra Tractor - Model A1</string>
    <string name="instrument_rent">₹1500.00</string>
    <string name="_0">0</string>
    <string name="point">POINT</string>
    <string name="post">POST</string>
    <string name="postCount">0</string>
    <string name="connectionCount">0</string>
    <string name="connection">CONNECTION</string>
    <string name="pointCount">0</string>
    <string name="username">Username</string>
    <string name="product_lable">Seaweed Green Fertilizer</string>
    <string name="deal_price">₹150.00</string>
    <string name="product_description">Potassium can reduce moisture loss from growing plants, thereby giving some drought resistance. Potassium improves the color, flavor, and storage of fruit and vegetables.</string>
    <string name="offer_on_product">(50% off on this order)</string>
    <string name="saving_after_discount">₹150.00</string>
    <string name="rent">Rent</string>
    <string name="brand">S and G Fertilizer</string>
    <string name="product_describtion">Product Describtion</string>
    <string name="product_name">PRODUCT NAME</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="_99_99">99.99 $</string>
    <string name="todo">TODO</string>
    <string name="mrp_159_99">MRP : 159.99 $</string>
    <string name="buy_now">BUY NOW</string>
    <string name="place_order">Place Order</string>
</resources>