<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/instrumentcard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    android:elevation="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="150dp"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/tractor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/INSTRUMENT_MODEL_NAME"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instrument_rent"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="/ Month"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/BTN_INQUIRY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#269745"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="INQUIRY" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>